feat: manual search service validations
