# backend/src/modules/searches/dtos/IManualSearchRequestDTO.ts
@@ -1,0 +1,7 @@
+export default interface IManualSearchRequestDTO {
+  data: {
+    origin_city_id: string;
+    destination_city_id: string;
+    date: string;
+  }[];
+}
