# backend/src/modules/searches/dtos/ISearchResponseDTO.ts
@@ -1,0 +1,49 @@
+export default interface ISearchResponseDTO {
+  results: {
+    general_info: {
+      origin_city_name: string;
+      destination_cities_names: {
+        destination_city_name: string;
+      }[];
+      initial_date: string;
+      final_date: string;
+    };
+    paths_result: {
+      price: number;
+      util_days: number;
+      distance: number;
+      initial_date: string;
+      final_date: string;
+      observations: {
+        observation: string;
+      }[];
+      paths: {
+        selected_period: {
+          selected_date: string;
+          selected_initial_time: string;
+          selected_final_time: string;
+          selected_initial_week_day: string;
+          selected_final_week_day: string;
+        };
+        cities_location: {
+          origin_city_latitude: string;
+          origin_city_longitude: string;
+          destination_city_latitude: string;
+          destination_city_longitude: string;
+        };
+        path_data: {
+          origin_city_name: string;
+          destination_city_name: string;
+          modal_name: string;
+          modal_image: string;
+          provider_name: string;
+          duration: number;
+          mileage: number;
+          cost: number;
+          boarding_place: string;
+          departure_place: string;
+        };
+      };
+    }[];
+  }[];
+}
